[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/Choice.gd" type="Script" id=1]
[ext_resource path="res://UI/UI_Beep_Double_Clean_Down_stereo.wav" type="AudioStream" id=2]
[ext_resource path="res://UI/UI_Animate_Clean_Beeps_Appear_stereo.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/fonts/dogica_bold/OTF/dogicabold.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
extra_spacing_char = -1
font_data = ExtResource( 4 )

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1
light_mode = 1

[sub_resource type="Animation" id=3]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 600, 0 ) ]
}

[node name="1" type="HBoxContainer"]
margin_top = 30.0
margin_right = 523.0
margin_bottom = 77.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_right = 47.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="Label" type="Label" parent="."]
margin_left = 51.0
margin_top = 17.0
margin_right = 523.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Option 1"

[node name="Polygon2D" type="Polygon2D" parent="Label"]
material = SubResource( 2 )
position = Vector2( 2.15091, -0.463303 )
color = Color( 0.631373, 0.4, 0, 1 )
polygon = PoolVector2Array( -0.409088, -12.1443, -12.4547, 24.919, 661.558, 19.8228, 685.482, -21 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Label/Polygon2D"]
anims/Wipe = SubResource( 3 )

[node name="Button" type="Button" parent="Label"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Focus" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="focus_entered" from="Label/Button" to="." method="on_focus"]
[connection signal="focus_exited" from="Label/Button" to="." method="leave_focus"]
[connection signal="pressed" from="Label/Button" to="." method="on_press"]
